--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <td> ⭐⭐⭐   </td>
   </tr>
 </table>
-<h2><a href="index3.html"> contact me </a></h2>
+    <h2><a href="index3.html"> contact me </a></h2>
+    <h2> <a href="index2.html"> My Hobbies</a></h2>
 </body>
 </html>
